# CNStockGPT

./: m1_setup.sh  main.py  pyproject.toml  requirements.txt  xueqiuPortfolio.py
