[tool.poetry]
name = "cnstockgpt"
version = "0.1.0"
description = ""
authors = ["aboutmydreams <aboutmydreams@163.com>"]

[tool.poetry.dependencies]
python = "3.10"
pandas = "^2.0.1"
revChatGPT = "^5.2.0"
akshare = "^1.9.97"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
